       or a date as the revision number. (Stefan)
- CHG: The revision column now sorts by number, not
       string and is nicely formatted. (Stefan Fuhrmann)
- CHG: During cleanup a dialog box is shown to indicate
       that somethings going on. (Stefan)
- BUG: TortoiseMerge skipped diffs of one line with the
       "Next Diff" or "Previous Diff" commands. (Stefan)

Version 1.0.3
- ADD: It's now possible to invoke the add command on
       already versioned folders to add unversioned 
       files inside that folder. (Stefan)
- CHG: The URL entry field now looks and behaves much more
       like the one in Internet Explorer (Thomas)
- CHG: TortoiseMerge now works on NT4 as well. (Thomas Girard)
- BUG: The overlay icons did not work on some machines
       correctly or not at all. (Stefan)
- BUG: committing a renamed directory didn't work. (Stefan)

Version 1.0.2
- ADD: Find dialog for TortoiseMerge. (Stefan)
- CHG: Improved checking for correctness of revision
       number fields (Thomas Epting)
- CHG: When "Ignore all whitespaces" is active and 
       "don't show whitespaces" then the line diff bar
       doesn't show those whitespaces. (Stefan)
- CHG: The context menus can now be activated by
       either a right-click or the special
       windows key or shift-F10. (Stefan)
- BUG: Remove compiler optimizations which lead 
       to a crash in the repo browser. (Stefan)
- BUG: Applying a patch which had the whole file
       deleted lead to a crash. (Stefan)
- BUG: TortoiseMerge showed error when the mousepointer
       moved past the last line in one-pane view. (Stefan)
- BUG: When sorting the files/folders in the commit dialog
       the "(P only)" mark got lost. (Stefan)

Version 1.0.1
- ADD: The dialog asking the user to enter an URL (e.g.
       for the repo browser) has now a history of
       the last used URL's for the user to select from. (Stefan)
- ADD: New option to use a short version of the date
       for log messages. (Thomas Epting)