@@ -792,6 +792,12 @@
 					RelativePath="LogDlg.h">
 				</File>
 				<File
+					RelativePath="LogPromptDlg.cpp">
+				</File>
+				<File
+					RelativePath="LogPromptDlg.h">
+				</File>
+				<File
 					RelativePath="MergeDlg.cpp">
 				</File>
 				<File
@@ -910,12 +916,6 @@
 				</File>
 				<File
 					RelativePath=".\InputDlg.h">
-				</File>
-				<File
-					RelativePath="LogPromptDlg.cpp">
-				</File>
-				<File
-					RelativePath="LogPromptDlg.h">
 				</File>
 				<File
 					RelativePath="PromptDlg.cpp">
@@ -1049,10 +1049,10 @@
 				RelativePath="..\Languages\res\ssh.ico">
 			</File>
 			<File
-				RelativePath="..\Icons\Tortoise.ico">
+				RelativePath="..\Languages\res\Tortoise.ico">
 			</File>
 			<File
-				RelativePath="..\Languages\res\Tortoise.ico">
+				RelativePath="..\Icons\Tortoise.ico">
 			</File>
 			<File
 				RelativePath="..\Icons\Tortoise13by13.ico">
